--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,13 @@
-name: 'publish'
+name: publish
 
 on:
+  # ① 推送 tag 时自动发布（半自动 = 你手动打 tag，它自动构建&发版）
   push:
-    branches:
-      - release
+    标签:
+      - 'app-v*' # 例如 app-v0.1.0、app-v0.1.3-beta
+
+  # ② 也支持在 Actions 页面手动点按钮触发
+  workflow_dispatch: {}
 
 jobs:
   publish-tauri:
@@ -23,6 +27,7 @@ jobs:
             args: ''
 
     runs-on: ${{ matrix.platform }}
+
     steps:
       - uses: actions/checkout@v4
 
@@ -34,12 +39,11 @@ jobs:
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
         with:
-          # Those targets are only used on macos runners so it's in an `if` to slightly speed up windows and linux builds.
+          # macOS 才需要这两个 target
           targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
 
       - name: install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-22.04'
-        # You can remove libayatana-appindicator3-dev if you don't use the system tray feature.
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev libayatana-appindicator3-dev librsvg2-dev
@@ -51,9 +55,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tagName: app-v__VERSION__ # the action automatically replaces \_\_VERSION\_\_ with the app version.
+          # __VERSION__ 会自动从 tauri.conf 里读取版本并替换
+          tagName: app-v__VERSION__
           releaseName: 'App v__VERSION__'
           releaseBody: 'See the assets to download this version and install.'
-          releaseDraft: true
+          releaseDraft: true   # 草稿，发不发由你手动点
           prerelease: false
           args: ${{ matrix.args }}
