--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: publish
 on:
   # ① 推送 tag 时自动发布（半自动 = 你手动打 tag，它自动构建&发版）
   push:
-    标签:
+    tags:
       - 'app-v*' # 例如 app-v0.1.0、app-v0.1.3-beta
 
   # ② 也支持在 Actions 页面手动点按钮触发
@@ -42,16 +42,18 @@ jobs:
           # macOS 才需要这两个 target
           targets: ${{ matrix.platform == 'macos-latest' && 'aarch64-apple-darwin,x86_64-apple-darwin' || '' }}
 
+      # 🐧 Ubuntu Runner 专用 Linux 依赖（Tauri v2 + WebKit2GTK 4.1）
       - name: install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-22.04'
         run: |
           sudo apt-get update
           sudo apt-get install -y \
             libgtk-3-dev \
-            libwebkit2gtk-4.0-dev \
+            libwebkit2gtk-4.1-dev \
             libayatana-appindicator3-dev \
             librsvg2-dev \
-            libsoup-3.0-dev
+            libsoup-3.0-dev \
+            libjavascriptcoregtk-4.1-dev
 
       - name: install frontend dependencies
         run: npm install -g bun && bun install
@@ -64,6 +66,6 @@ jobs:
           tagName: app-v__VERSION__
           releaseName: 'App v__VERSION__'
           releaseBody: 'See the assets to download this version and install.'
-          releaseDraft: true   # 草稿，发不发由你手动点
+          releaseDraft: true     # 草稿，发不发由你手动点
           prerelease: false
           args: ${{ matrix.args }}
